
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_carbohidratos"
    tools:context="com.example.mario.gii_14b.CarbohidratosFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_carbohidratos"
        android:id="@+id/tv_carbohidratos"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/background_material_dark" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_comidas"
        android:layout_below="@+id/tv_carbohidratos"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_valorcarbo"
        android:id="@+id/tv_valorcarbo"
        android:layout_below="@+id/sp_comidas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/tv_valorcarbo"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_finalizar"
        android:id="@+id/bt_finalizar"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:background="#00c4eb"
        android:textColor="#ffffff"
        android:onClick="finalizarOnClick"
        android:layout_marginTop="50dp" />

</RelativeLayout>
