<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_incidencias"
    tools:context="com.tfg_gii14b.mario.interfaz.IncidenciasFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_incidencia"
        android:id="@+id/tv_incidencia"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/background_floating_material_dark" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_incidencias"
        android:layout_below="@+id/tv_incidencia"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_observaciones"
        android:id="@+id/tv_observaciones"
        android:layout_below="@+id/sp_incidencias"
        android:layout_centerHorizontal="true"
        android:textColor="@color/background_floating_material_dark"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/et_observaciones"
        android:layout_below="@+id/tv_observaciones"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_guardar"
        android:id="@+id/bt_incidencias"
        android:background="#00c4eb"
        android:textColor="#ffffff"
        android:onClick="incidenciasOnClick"
        android:layout_below="@+id/et_observaciones"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
</ScrollView>