<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_actividad_fisica"
    tools:context="com.tfg_gii14b.mario.interfaz.ActividadFisicaFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_intensidad"
        android:id="@+id/tv_tipoejer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/abc_primary_text_disable_only_material_light"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_tipoejer"
        android:layout_below="@+id/tv_tipoejer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tipoejer"
        android:id="@+id/tv_intensidad"
        android:layout_below="@+id/sp_tipoejer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_intensidad"
        android:layout_below="@+id/tv_intensidad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_siguiente"
        android:id="@+id/bt_siguiente"
        android:background="#00c4eb"
        android:textColor="#ffffff"
        android:onClick="siguienteOnClick"
        android:layout_below="@+id/sp_intensidad"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
</ScrollView>